[gd_scene load_steps=10 format=3 uid="uid://begfxb032tx6l"]

[ext_resource type="Script" uid="uid://n8xi4d1bxx5w" path="res://scripts/ui/MainMenu.gd" id="1_p5fgu"]
[ext_resource type="Material" uid="uid://bcn42i3b344gv" path="res://assets/Shaders/speedlines_material.tres" id="2_sjxhf"]
[ext_resource type="Texture2D" uid="uid://dneefye32qvhd" path="res://assets/Background/Generated Image October 07, 2025 - 4_20PM.png" id="3_ko0rf"]
[ext_resource type="Texture2D" uid="uid://bus0w6s6a0po6" path="res://assets/Buttons/Generated Image October 13, 2025 - 5_34PM-Photoroom.png" id="4_ostsq"]
[ext_resource type="FontFile" uid="uid://bseh15ef1yqw5" path="res://assets/fonts/JungleAdventurer.ttf" id="5_ostsq"]
[ext_resource type="Texture2D" uid="uid://porrrf2b7npl" path="res://assets/Logo/light up logo golden.png" id="6_ostsq"]
[ext_resource type="Texture2D" uid="uid://bqcfi0kig8ywj" path="res://assets/CharacterArts/Generated Image October 07, 2025 - 4_29PM-Photoroom.png" id="7_qkm1d"]
[ext_resource type="Script" uid="uid://orvdk4tc675j" path="res://scripts/effects/Control_shake_effect.gd" id="8_p5fgu"]
[ext_resource type="Texture2D" uid="uid://kiuxdmfbn6nq" path="res://assets/Background/Generated Image October 07, 2025 - 4_27PM_upscayl_2x_upscayl-standard-4x-Photoroom.png" id="9_p5fgu"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_p5fgu")

[node name="StartingScreen" type="Control" parent="Control"]
material = ExtResource("2_sjxhf")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureBG" type="TextureRect" parent="Control/StartingScreen"]
modulate = Color(1, 1, 1, 0.760784)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_ko0rf")

[node name="ColorRect" type="ColorRect" parent="Control/StartingScreen"]
visible = false
modulate = Color(1, 1, 1, 0.639216)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1000.0
offset_bottom = 570.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.9272, 1.9272)
color = Color(0.210186, 4.45691e-05, 0.771321, 1)

[node name="SpeedLines" type="ColorRect" parent="Control/StartingScreen"]
visible = false
material = ExtResource("2_sjxhf")
layout_mode = 0
offset_top = -2.0
offset_right = 1920.0
offset_bottom = 1078.0
scale = Vector2(1.1922, 1.1922)

[node name="ButtonsContainer" type="Control" parent="Control/StartingScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1594.0
offset_top = 1037.0
offset_right = 1594.0
offset_bottom = 1037.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.714225, 0.714225)
pivot_offset = Vector2(-415.481, -449.381)

[node name="PlayButton" type="TextureButton" parent="Control/StartingScreen/ButtonsContainer"]
layout_mode = 0
offset_left = -1001.46
offset_top = -691.068
offset_right = 278.543
offset_bottom = 39.9318
pivot_offset = Vector2(271, 115)
texture_normal = ExtResource("4_ostsq")
stretch_mode = 0

[node name="SettingsButton" type="TextureButton" parent="Control/StartingScreen/ButtonsContainer"]
visible = false
layout_mode = 0
offset_left = -685.704
offset_top = -361.173
offset_right = -138.704
offset_bottom = -99.1735
scale = Vector2(0.898345, 0.898345)
pivot_offset = Vector2(271, 115)
stretch_mode = 0

[node name="Label" type="Label" parent="Control/StartingScreen/ButtonsContainer/SettingsButton"]
layout_mode = 0
offset_left = -36.2317
offset_top = 74.9263
offset_right = 563.768
offset_bottom = 184.926
theme_override_colors/font_outline_color = Color(0.0666667, 0.0941176, 0.109804, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("5_ostsq")
theme_override_font_sizes/font_size = 110
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LightUp logo" type="TextureRect" parent="Control/StartingScreen"]
layout_mode = 0
offset_left = 513.0
offset_top = -96.0
offset_right = 1793.0
offset_bottom = 635.0
scale = Vector2(1.11903, 1.11903)
texture = ExtResource("6_ostsq")
script = ExtResource("8_p5fgu")
shake_intensity = 10.0
shake_speed = 1.0

[node name="CharactersGraphic" type="TextureRect" parent="Control/StartingScreen"]
layout_mode = 0
offset_left = -30.0
offset_top = 39.0
offset_right = 1056.0
offset_bottom = 1435.0
scale = Vector2(0.764435, 0.764435)
texture = ExtResource("7_qkm1d")

[node name="MirrorGraphic" type="TextureRect" parent="Control/StartingScreen"]
visible = false
layout_mode = 0
offset_left = 1077.0
offset_top = 422.0
offset_right = 2386.0
offset_bottom = 1807.0
scale = Vector2(0.432475, 0.432475)
texture = ExtResource("9_p5fgu")
